[package]
name = "todo-cli-app"
description = "Just a simple todo app"
version = "1.0.0"
repository = "https://github.com/poffomoe/todo"
homepage = "https://github.com/poffomoe/todo"
readme = "README.md"
authors = ["poffomoe"]
keywords = ["todo", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]